[project]
name = "solauer-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "cryptography>=45.0.5",
    "grpcio>=1.73.1",
    "grpcio-tools>=1.73.1",
    "protobuf>=6.31.1",
    "pynacl>=1.5.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "solana>=0.36.7",
    "solders>=0.26.0",
    "uuid>=1.30",
]
